{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 219,
  "lineage": "61a22175-99f2-64a4-392c-fb57f181dd30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db-elastic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa8a0aede850e2bb",
            "association_id": "eipassoc-0cca1b011bc9eadbe",
            "domain": "vpc",
            "id": "eipalloc-0fa8a0aede850e2bb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fac6d103bb20a8ec",
            "private_dns": "ip-20-0-1-78.ap-south-1.compute.internal",
            "private_ip": "20.0.1.78",
            "public_dns": "ec2-15-206-29-248.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.29.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db-elastic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a023b3b7ab95049",
            "association_id": "eipassoc-0068b18d2efb16dc6",
            "domain": "vpc",
            "id": "eipalloc-06a023b3b7ab95049",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f884cac2f4e881d4",
            "private_dns": "ip-20-0-3-254.ap-south-1.compute.internal",
            "private_ip": "20.0.3.254",
            "public_dns": "ec2-3-7-167-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.167.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:600346421145:instance/i-06895ed41e38067c2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06895ed41e38067c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d03afdd2f477f52",
            "private_dns": "ip-20-0-1-252.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.252",
            "public_ip": "13.232.234.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0780acbab00ceead7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ec1544ba47e7926",
            "tags": {
              "Name": "Bastion-host"
            },
            "tags_all": {
              "Name": "Bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082165720c11d3669"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_security_group.demosg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc",
            "null_resource.copy",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:600346421145:instance/i-0cfe7f486eea0c4a2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfe7f486eea0c4a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c4fd600b8ebf50e",
            "private_dns": "ip-20-0-2-172.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da86e63123c4cb99",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da4b17e5cf720900",
            "tags": {
              "Name": "mongo-1"
            },
            "tags_all": {
              "Name": "mongo-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082165720c11d3669"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_instance.bastion-host",
            "aws_internet_gateway.db-igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_security_group.demosg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc",
            "null_resource.copy",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:600346421145:instance/i-0deeb2b64dd667b5e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0deeb2b64dd667b5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a379a232244f9c7d",
            "private_dns": "ip-20-0-4-101.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.4.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eaccae55f38a7a17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8262922c62ae204",
            "tags": {
              "Name": "mongo-2"
            },
            "tags_all": {
              "Name": "mongo-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082165720c11d3669"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_instance.bastion-host",
            "aws_instance.mongo-1",
            "aws_internet_gateway.db-igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_security_group.demosg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc",
            "null_resource.copy",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e5424edfe926b43",
            "arn": "arn:aws:ec2:ap-south-1:600346421145:instance/i-018ae368411702466",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018ae368411702466",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02aa5c0a2cdbde72e",
            "private_dns": "ip-20-0-5-141.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.5.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f956d24d8d131539",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d0cc29293167403",
            "tags": {
              "Name": "mongo-3"
            },
            "tags_all": {
              "Name": "mongo-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082165720c11d3669"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_instance.bastion-host",
            "aws_instance.mongo-1",
            "aws_instance.mongo-2",
            "aws_internet_gateway.db-igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_security_group.demosg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc",
            "null_resource.copy",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:internet-gateway/igw-013728922fadf71a4",
            "id": "igw-013728922fadf71a4",
            "owner_id": "600346421145",
            "tags": {
              "Name": "db-igw"
            },
            "tags_all": {
              "Name": "db-igw"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db-nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa8a0aede850e2bb",
            "association_id": "eipassoc-0cca1b011bc9eadbe",
            "connectivity_type": "public",
            "id": "nat-0964d68901ddc30a3",
            "network_interface_id": "eni-0fac6d103bb20a8ec",
            "private_ip": "20.0.1.78",
            "public_ip": "15.206.29.248",
            "subnet_id": "subnet-02ec1544ba47e7926",
            "tags": {
              "Name": "dbnat-1"
            },
            "tags_all": {
              "Name": "dbnat-1"
            }
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db-nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a023b3b7ab95049",
            "association_id": "eipassoc-0068b18d2efb16dc6",
            "connectivity_type": "public",
            "id": "nat-0d97ff9084b96078d",
            "network_interface_id": "eni-0f884cac2f4e881d4",
            "private_ip": "20.0.3.254",
            "public_ip": "3.7.167.122",
            "subnet_id": "subnet-07f1b818b13436038",
            "tags": {
              "Name": "dbnat-2"
            },
            "tags_all": {
              "Name": "dbnat-2"
            }
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:route-table/rtb-07d678df5e9a968ad",
            "id": "rtb-07d678df5e9a968ad",
            "owner_id": "600346421145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013728922fadf71a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pub-rot"
            },
            "tags_all": {
              "Name": "db-pub-rot"
            },
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:route-table/rtb-01e296987bdf59cc6",
            "id": "rtb-01e296987bdf59cc6",
            "owner_id": "600346421145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0964d68901ddc30a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-1"
            },
            "tags_all": {
              "Name": "db-pvt-rot-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:route-table/rtb-0f7ba833d16a53e06",
            "id": "rtb-0f7ba833d16a53e06",
            "owner_id": "600346421145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d97ff9084b96078d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-2"
            },
            "tags_all": {
              "Name": "db-pvt-rot-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:route-table/rtb-0017b1577b70ab938",
            "id": "rtb-0017b1577b70ab938",
            "owner_id": "600346421145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0964d68901ddc30a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-3"
            },
            "tags_all": {
              "Name": "db-pvt-rot-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:route-table/rtb-045cbc270a9827e20",
            "id": "rtb-045cbc270a9827e20",
            "owner_id": "600346421145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d97ff9084b96078d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-4"
            },
            "tags_all": {
              "Name": "db-pvt-rot-4"
            },
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bebf1dbd844606c",
            "route_table_id": "rtb-07d678df5e9a968ad",
            "subnet_id": "subnet-02ec1544ba47e7926"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0612835468c868773",
            "route_table_id": "rtb-07d678df5e9a968ad",
            "subnet_id": "subnet-07f1b818b13436038"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pvt-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024ae9dcc19ed6b1d",
            "route_table_id": "rtb-01e296987bdf59cc6",
            "subnet_id": "subnet-0da4b17e5cf720900"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0694cc24163fbea2c",
            "route_table_id": "rtb-0f7ba833d16a53e06",
            "subnet_id": "subnet-0f8262922c62ae204"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0637240c8850769ab",
            "route_table_id": "rtb-0017b1577b70ab938",
            "subnet_id": "subnet-09d0cc29293167403"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbdb368361eba0bb",
            "route_table_id": "rtb-045cbc270a9827e20",
            "subnet_id": "subnet-006641c7e4fce2574"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:security-group/sg-082165720c11d3669",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082165720c11d3669",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230523072943302300000004",
            "name_prefix": "terraform-",
            "owner_id": "600346421145",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08689f4e296944781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-02ec1544ba47e7926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ec1544ba47e7926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pub-subnet-1"
            },
            "tags_all": {
              "Name": "db-pub-subnet-1"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-07f1b818b13436038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1b818b13436038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pub-subnet-2"
            },
            "tags_all": {
              "Name": "db-pub-subnet-2"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pvt-sub-1",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-0da4b17e5cf720900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da4b17e5cf720900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-1"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-1"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-0f8262922c62ae204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8262922c62ae204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-2"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-2"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-09d0cc29293167403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d0cc29293167403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-3"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-3"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:subnet/subnet-006641c7e4fce2574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006641c7e4fce2574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600346421145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-4"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-4"
            },
            "vpc_id": "vpc-08689f4e296944781"
          },
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dbvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600346421145:vpc/vpc-08689f4e296944781",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0730e33c60e0135ae",
            "default_route_table_id": "rtb-07cf65872d57d54be",
            "default_security_group_id": "sg-09cc268a161d48707",
            "dhcp_options_id": "dopt-057973d72ff294373",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08689f4e296944781",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cf65872d57d54be",
            "owner_id": "600346421145",
            "tags": {
              "Name": "dbvpc"
            },
            "tags_all": {
              "Name": "dbvpc"
            }
          }
        }
      ]
    }
  ]
}